--- a/pvFactory/Makefile
+++ b/pvFactory/Makefile
@@ -50,7 +50,7 @@ ifdef EPICS_HOST_ARCH
    PV_LIBS_Darwin += -nil-
 
    INSTALL_INCLUDE = $(INSTALL_LOCATION)/include/edm
-   USR_INCLUDES += -I../../util -I../../pvlib -I../../lib
+   USR_INCLUDES += -I../../util -I../../lib
 
    LIB_SRCS   += textupdate.cc
    LIB_SRCS   += SciPlot.cc
