--- a/triumflib/Makefile
+++ b/triumflib/Makefile
@@ -32,7 +32,7 @@ ifdef EPICS_HOST_ARCH
    #PROD_LIBS += ca Com
 
    INSTALL_INCLUDE = $(INSTALL_LOCATION)/include/edm
-   USR_INCLUDES += -I../../util -I../../lib -I../../pvlib
+   USR_INCLUDES += -I../../util -I../../lib
 
    USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
 
