--- a/epicsPv/Makefile
+++ b/epicsPv/Makefile
@@ -27,6 +27,8 @@ ifdef EPICS_HOST_ARCH
    LIBRARY = Epics
 
    USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
+   USR_LIBS += cfcaa62e-8199-11d3-a77f-00104b8742df
+   USR_LIBS += ca Com
 
    INSTALL_INCLUDE = $(INSTALL_LOCATION)/include/edm
    USR_INCLUDES += -I../../util -I../../lib
