--- a/pnglib/Makefile
+++ b/pnglib/Makefile
@@ -6,8 +6,10 @@ ifdef EPICS_HOST_ARCH
 #====================================================================
 # Required by EDM on Solaris at SLAC
 #====================================================================
-PNG_LIB=/afs/slac/package/graphics/png/1.0.14/sun4x_57/lib
-PNG_INC=/afs/slac/package/graphics/png/1.0.14/common/include
+#PNG_LIB=/afs/slac/package/graphics/png/1.0.14/sun4x_57/lib
+#PNG_INC=/afs/slac/package/graphics/png/1.0.14/common/include
+PNG_LIB=/usr/lib
+PNG_INC=/usr/include
 
    SHARED_LIBRARIES = YES
 
@@ -20,16 +22,16 @@ PNG_INC=/afs/slac/package/graphics/png/1.0.14/common/include
    USR_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
 
    USR_LIBS_Linux += Xm Xt Xp Xtst X11
-   USR_SYS_LIBS_Linux += pthread dl png
+   USR_SYS_LIBS_Linux += pthread dl png z
 
    USR_LIBS_Darwin += Xm Xt Xp Xtst X11
-   USR_SYS_LIBS_Darwin += pthread dl png
+   USR_SYS_LIBS_Darwin += pthread dl png z
 
    USR_LIBS_solaris +=  Xm Xt Xmu X11 Xext
    USR_SYS_LIBS_solaris += pthread dl rt png z
 
    USR_LIBS_hpux11_11_mt = Xm Xt X11 Xext
-   USR_SYS_LIBS_hpux11_11_mt = pthread png
+   USR_SYS_LIBS_hpux11_11_mt = pthread png z
 
    LIBRARY = 57d79238-2924-420b-ba67-dfbecdf03fcd
 
