--- a/locPv/Makefile
+++ b/locPv/Makefile
@@ -27,6 +27,7 @@ ifdef EPICS_HOST_ARCH
    LIBRARY = Loc
 
    USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
+   USR_LIBS += cfcaa62e-8199-11d3-a77f-00104b8742df
 
    INSTALL_INCLUDE = $(INSTALL_LOCATION)/include/edm
    USR_INCLUDES += -I../../util -I../../lib
