--- a/calcPv/Makefile
+++ b/calcPv/Makefile
@@ -4,6 +4,8 @@ ifdef EPICS_HOST_ARCH
 
    SHARED_LIBRARIES = YES
 
+   USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
+
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
