--- a/baselib/Makefile
+++ b/baselib/Makefile
@@ -4,6 +4,8 @@ ifdef EPICS_HOST_ARCH
 
    SHARED_LIBRARIES = YES
 
+   USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
+
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
@@ -78,6 +80,7 @@ ifdef EPICS_HOST_ARCH
    LIB_SRCS += radio_button.cc
    LIB_SRCS += xygraph.cc
    LIB_SRCS += pip.cc
+   LIB_SRCS += include_widget.cc
    LIB_SRCS += pv_inspector.cc
    LIB_SRCS += table.cc
    LIB_SRCS += coefTable.cc
