--- a/indicator/Makefile
+++ b/indicator/Makefile
@@ -7,6 +7,7 @@ ifdef EPICS_HOST_ARCH
    USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
    USR_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
 
+   USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_LIBS_Linux += Xm Xt Xp Xtst X11
    USR_SYS_LIBS_Linux += pthread dl
