--- a/slaclib/Makefile
+++ b/slaclib/Makefile
@@ -3,7 +3,9 @@ ifdef EPICS_HOST_ARCH
   include $(TOP)/configure/CONFIG
 
    SHARED_LIBRARIES = YES
-   
+
+   USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
+
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
