--- a/triumflib/Makefile
+++ b/triumflib/Makefile
@@ -5,6 +5,7 @@ ifdef EPICS_HOST_ARCH
    SHARED_LIBRARIES = YES
    
    #IMAGELIB=/usr/local
+   USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
