eliminate Xp from all Makefile files and update configuration content

--- a/pnglib/Makefile
+++ b/pnglib/Makefile
@@ -22,10 +22,10 @@ PNG_INC=/usr/include
    USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
    USR_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
 
-   USR_LIBS_Linux += Xm Xt Xp Xtst X11
+   USR_LIBS_Linux += Xm Xt Xtst X11
    USR_SYS_LIBS_Linux += pthread dl png z
 
-   USR_LIBS_Darwin += Xm Xt Xp Xtst X11
+   USR_LIBS_Darwin += Xm Xt Xtst X11
    USR_SYS_LIBS_Darwin += pthread dl png z
 
    USR_LIBS_solaris +=  Xm Xt Xmu X11 Xext
@@ -51,7 +51,6 @@ PNG_INC=/usr/include
   
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
