--- a/choiceButton/Makefile
+++ b/choiceButton/Makefile
@@ -9,11 +9,11 @@ ifdef EPICS_HOST_ARCH
 
    USR_CXXFLAGS += -std=c++0x -fpermissive -Wno-narrowing -Wno-write-strings -Wno-unused-but-set-variable
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_Linux += Xm Xt Xp Xtst X11
+   USR_LIBS_Linux += Xm Xt Xtst X11
    USR_SYS_LIBS_Linux += pthread dl
    
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
-   USR_LIBS_Darwin += Xm Xt Xp Xtst X11
+   USR_LIBS_Darwin += Xm Xt Xtst X11
    USR_SYS_LIBS_Darwin += pthread dl
 
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
@@ -35,7 +35,6 @@ ifdef EPICS_HOST_ARCH
 
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
