--- a/diamondlib/Makefile
+++ b/diamondlib/Makefile
@@ -14,10 +14,10 @@ ifdef EPICS_HOST_ARCH
    EdmDiamond_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
    EdmDiamond_LIBS += Com
 
-   EdmDiamond_LIBS_Linux += Xm Xt Xp Xtst X11
+   EdmDiamond_LIBS_Linux += Xm Xt Xtst X11
    EdmDiamond_SYS_LIBS_Linux += pthread dl
 
-   EdmDiamond_LIBS_Darwin += Xm Xt Xp Xtst X11
+   EdmDiamond_LIBS_Darwin += Xm Xt Xtst X11
    EdmDiamond_SYS_LIBS_Darwin += pthread dl
 
    EdmDiamond_LIBS_solaris +=  Xm Xt Xmu X11 Xext
@@ -42,7 +42,6 @@ ifdef EPICS_HOST_ARCH
 
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
