--- a/edmMain/Makefile
+++ b/edmMain/Makefile
@@ -16,10 +16,10 @@ ifdef EPICS_HOST_ARCH
    edm_LIBS += cfcaa62e-8199-11d3-a77f-00104b8742df 
    edm_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
 
-   edm_LIBS_Linux += Xm Xmu Xt Xp Xtst X11
+   edm_LIBS_Linux += Xm Xmu Xt Xtst X11
    edm_SYS_LIBS_Linux += pthread dl
    
-   edm_LIBS_Darwin += Xm Xmu Xt Xp Xtst X11
+   edm_LIBS_Darwin += Xm Xmu Xt Xtst X11
    edm_SYS_LIBS_Darwin += pthread dl
 
    edm_LIBS_solaris += Xm Xt Xmu X11 Xext
@@ -66,7 +66,6 @@ ifdef EPICS_HOST_ARCH
   
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
