--- a/lib/Makefile
+++ b/lib/Makefile
@@ -23,10 +23,10 @@ ifdef EPICS_HOST_ARCH
   # Add debugging
   #USR_CXXFLAGS_Linux += -g -O0
 
-  USR_LIBS_Darwin += Xm Xt Xp Xtst X11
+  USR_LIBS_Darwin += Xm Xt Xtst X11
   USR_SYS_LIBS_Darwin += pthread dl
 
-  USR_LIBS_Linux += Xm Xt Xp Xtst X11
+  USR_LIBS_Linux += Xm Xt Xtst X11
   USR_SYS_LIBS_Linux += pthread dl
 
   USR_LIBS_solaris += Xm Xt Xmu X11 Xext
@@ -110,7 +110,6 @@ ifdef EPICS_HOST_ARCH
   
   # ELW added following two lines for
   # Red Hat 7.0 LINUX
-  Xp_DIR =   $(X11_LIB)
   Xext_DIR = $(X11_LIB)
   #
   XlibGUI_DIR = $(X11_LIB)
