--- a/multiSegRampButton/Makefile
+++ b/multiSegRampButton/Makefile
@@ -10,11 +10,11 @@ ifdef EPICS_HOST_ARCH
    USR_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
 
    USR_CXXFLAGS_Linux += -DSINGLE_THREADED=1 -D__epics__=1
-   USR_LIBS_Linux += Xm Xt Xp Xtst X11
+   USR_LIBS_Linux += Xm Xt Xtst X11
    USR_SYS_LIBS_Linux += pthread dl
    
    USR_CXXFLAGS_Darwin += -DSINGLE_THREADED=1 -D__epics__=1 -Wno-long-long
-   USR_LIBS_Darwin += Xm Xt Xp Xtst X11
+   USR_LIBS_Darwin += Xm Xt Xtst X11
    USR_SYS_LIBS_Darwin += pthread dl
 
    USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
@@ -36,7 +36,6 @@ ifdef EPICS_HOST_ARCH
 
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
