--- a/triumflib/Makefile
+++ b/triumflib/Makefile
@@ -14,10 +14,10 @@ ifdef EPICS_HOST_ARCH
    EdmTriumf_LIBS += EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df
    EdmTriumf_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
 
-   EdmTriumf_LIBS_Linux += Xm Xt Xp Xtst X11
+   EdmTriumf_LIBS_Linux += Xm Xt Xtst X11
    EdmTriumf_SYS_LIBS_Linux += pthread dl
    
-   EdmTriumf_LIBS_Darwin += Xm Xt Xp Xtst X11
+   EdmTriumf_LIBS_Darwin += Xm Xt Xtst X11
    EdmTriumf_SYS_LIBS_Darwin += pthread dl
 
    EdmTriumf_LIBS_solaris +=  Xm Xt Xmu X11 Xext
@@ -46,7 +46,6 @@ ifdef EPICS_HOST_ARCH
   
    # ELW added following two lines for
    # Red Hat 7.0 LINUX
-   Xp_DIR =   $(X11_LIB)
    Xext_DIR = $(X11_LIB)
    #
    XlibGUI_DIR = $(X11_LIB)
