Added errlog.h to calcPerform and removed ungif in the giflib makefile for Centos8

--- a/giflib/Makefile
+++ b/giflib/Makefile
@@ -22,16 +22,16 @@ GIF_INC ?= /usr/include
    USR_LIBS += 114135a4-6f6c-11d3-95bc-00104b8742df
 
    USR_LIBS_Linux += Xm Xt Xtst X11
-   USR_SYS_LIBS_Linux += pthread dl ungif gif
+   USR_SYS_LIBS_Linux += pthread dl gif
 
    USR_LIBS_Darwin += Xm Xt Xtst X11
-   USR_SYS_LIBS_Darwin += pthread dl ungif gif
+   USR_SYS_LIBS_Darwin += pthread dl gif
 
    USR_LIBS_solaris += Xm Xt Xmu X11 Xext
-   USR_SYS_LIBS_solaris += pthread dl rt ungif gif
+   USR_SYS_LIBS_solaris += pthread dl rt gif
 
    USR_LIBS_hpux11_11_mt = Xm Xt X11 Xext
-   USR_SYS_LIBS_hpux11_11_mt = pthread ungif gif
+   USR_SYS_LIBS_hpux11_11_mt = pthread gif
 
    LIBRARY = cf322683-513e-4570-a44b-7cdd7cae0de5
 
@@ -60,13 +60,13 @@ GIF_INC ?= /usr/include
    HCLXt_DIR = $(X11_LIB)
    Xlib_DIR = $(X11_LIB)
    HCLXmu_DIR = $(X11_LIB)
-   
+
 
    LIB_SRCS += gif.cc
    LIB_SRCS += reg_libcf322683-513e-4570-a44b-7cdd7cae0de5.cc
-   
+
    include $(TOP)/configure/RULES
-   
+
 else
    ifneq ($(wildcard $(TOP)/config)x,x)
      # New Makefile.Host config file location
